adjusted backend link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -601,7 +601,7 @@ ctx.fillRect(0, 0, canvas.width, canvas.height);
     }
 
     
-const BASE_URL = "http://localhost:5000"; // later replace with your deployed backend URL
+const BASE_URL = "https://sudoku-game-1-0kf2.onrender.com"; // later replace with your deployed backend URL
 
 async function handleLogin() {
     const username = document.getElementById("username").value.trim();
