--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -97,7 +97,7 @@
   </div>
 
   <script>
-const BASE_URL = "http://localhost:5000"; // make sure your backend is running here
+const BASE_URL = "https://sudoku-game-1-0kf2.onrender.com"; // make sure your backend is running here
 
 async function handleSignup() {
   const username = document.getElementById('newUsername').value.trim();
